--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -9,14 +11,64 @@
     </parent>
 
     <groupId>org.codeartisans</groupId>
-    <artifactId>play2-qi4j</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <artifactId>playqi</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <name>${project.artifactId}</name>
     <packaging>jar</packaging>
-    <url>http://github.com/eskatos/play2-qi4j</url>
+    <url>http://github.com/eskatos/playqi</url>
+
+    <repositories>
+        <repository>
+            <id>typesafe</id>
+            <url>http://repo.typesafe.com/typesafe/releases/</url>
+        </repository>
+        <repository>
+            <id>qi4j</id>
+            <url>repository.ops4j.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>qi4j-snapshots</id>
+            <url>https://repository-qi4j.forge.cloudbees.com/snapshot/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <properties>
+        <version.play2>2.0.3</version.play2>
+        <version.qi4j>2.0-SNAPSHOT</version.qi4j>
+    </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.qi4j.core</groupId>
+            <artifactId>org.qi4j.core.api</artifactId>
+            <version>${version.qi4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.qi4j.core</groupId>
+            <artifactId>org.qi4j.core.bootstrap</artifactId>
+            <version>${version.qi4j}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>play</groupId>
+            <artifactId>play_2.9.1</artifactId>
+            <version>${version.play2}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>play</groupId>
+            <artifactId>play-test_2.9.1</artifactId>
+            <version>${version.play2}</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
