--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         </repository>
         <repository>
             <id>qi4j</id>
-            <url>http://repository.ops4j.org/maven2/</url>
+            <url>https://repository-qi4j.forge.cloudbees.com/release/</url>
         </repository>
         <repository>
             <id>qi4j-snapshots</id>
@@ -40,8 +40,8 @@
     </repositories>
 
     <properties>
-        <version.play2>2.0.4</version.play2>
-        <version.qi4j>2.0-SNAPSHOT</version.qi4j>
+        <version.play2>2.1-11282012</version.play2>
+        <version.qi4j>2.0-RC1</version.qi4j>
     </properties>
 
     <dependencies>
@@ -64,13 +64,13 @@
 
         <dependency>
             <groupId>play</groupId>
-            <artifactId>play_2.9.1</artifactId>
+            <artifactId>play_2.10</artifactId>
             <version>${version.play2}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>play</groupId>
-            <artifactId>play-test_2.9.1</artifactId>
+            <artifactId>play-test_2.10</artifactId>
             <version>${version.play2}</version>
             <scope>provided</scope>
         </dependency>
