Updated to Play 2.1

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     </repositories>
 
     <properties>
-        <version.play2>2.1-11282012</version.play2>
+        <version.play2>2.1.0</version.play2>
         <version.qi4j>2.0-RC1</version.qi4j>
     </properties>
 
