--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>org.codeartisans</groupId>
     <artifactId>playqi</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>${project.artifactId}</name>
     <packaging>jar</packaging>
